# netatalk-client

./: .markdownlint.json  INSTALL.md  NEWS.md  README.md  TODO.md  meson.build  meson_options.txt  sonar-project.properties
.github/: dependabot.yml
.github/workflows/: ci.yml  code_analysis.yml  test.yml
cmdline/: cmdline_afp.c  cmdline_afp.h  cmdline_main.c  cmdline_testafp.c  cmdline_testafp.h  discover.c  discover.h  getstatus.c  meson.build  metadata.c  metadata.h
common/: daemon_socket.c  daemon_socket.h  meson.build
contrib/scripts/: codefmt.sh
daemon/: commands.c  commands.h  daemon.c  daemon.h  daemon_client.c  daemon_client.h  ipc.h  meson.build  metadata.c  metadata.h  server.h  stateless.c  stateless_internal.h  stateless_ipc.h
discovery/: backend.h  backend_avahi.c  backend_dnssd.c  backend_stub.c  discovery.c  discovery.h  meson.build  service_types.h
discovery/client/: discover.c  discover.h
docs/: DEVELOPER.md  FEATURES.md  GETTING_STARTED.md  PERFORMANCE.md  REPORTING_BUGS.md  meson.build
docs/manpages/: afp_client.1  afpcmd.1  afpfsd.1  afpgetstatus.1  afpsld.1  mount_afpfs.1
fuse/: client.c  commands.c  daemon.c  daemon.h  fuse_error.c  fuse_error.h  fuse_fs.c  fuse_fs.h  fuse_int.c  fuse_internal.h  fuse_ipc.h  meson.build
include/: afp.h  afp_ipc.h  afp_protocol.h  afp_server.h  afp_xattr.h  afpsl.h  compat.h  dsi.h  libafpclient.h  meson.build  midlevel.h  utils.h
include/netatalk-client/: afpsl.h  transport.h  types.h  url.h
lib/: afp.c  afp_internal.h  afp_protocol.h  afp_replies.h  afp_url.c  client.c  client.h  codepage.c  codepage.h  compat.h  connect.c  daemon_signals.h  daemon_socket.c  daemon_socket.h  debug.c  did.c  dsi.c  dsi.h  dsi_protocol.h  explicit_bzero.c  forklist.c  forklist.h  identify.c  log.c  loop.c  lowlevel.c  lowlevel.h  map_def.c  mapping.h  meson.build  midlevel.c  midlevel.h  proto_attr.c  proto_desktop.c  proto_directory.c  proto_files.c  proto_fork.c  proto_login.c  proto_map.c  proto_replyblock.c  (+20 more)
test/: Dockerfile  TESTS.md  check_include_boundaries.py  discovery_command_fake_backend.c  discovery_fake_backend.c  discovery_service_fake_backend.c  entrypoint.sh  header_compile.c  header_compile.cpp  meson.build  tap.h  test_afpcmd_batch.t  test_afpcmd_interactive.t  test_cmdline_discover.c  test_daemon_socket.c  test_discover_command.c  test_discovery.c  test_fuse.t  test_identify.c  test_ipc_namespaces.c  test_log.c  test_metadata.c  test_protocol_replies.c  test_public_headers.c  test_resolve_service.c  test_stateless_log.c  test_transport_api.c  test_versions.c
