option(
    'enable-debugging',
    type: 'array',
    choices: [
        'afp',
        'dsi',
    ],
    value: [],
    description: 'Enable verbose debug logs for the AFP or DSI protocols',
)
option(
    'enable-docs',
    type: 'boolean',
    value: true,
    description: 'Enable building of documentation',
)
option(
    'enable-fuse',
    type: 'boolean',
    value: true,
    description: 'Enable FUSE support',
)
option(
    'force-fuse-v2',
    type: 'boolean',
    value: false,
    description: 'Force FUSE v2 compatibility mode (if FUSE v3 is detected)',
)
option(
    'zeroconf',
    type: 'feature',
    value: 'auto',
    description: 'Enable Zeroconf AFP service discovery',
)
option(
    'zeroconf-backend',
    type: 'combo',
    choices: ['auto', 'avahi', 'dnssd'],
    value: 'auto',
    description: 'Select the Zeroconf discovery provider',
)
